yet another big un

--- a/client/taskurbate.html
+++ b/client/taskurbate.html
@@ -14,3 +14,14 @@
 		</footer>
 	</div>
 </template>
+
+<template name="containerlessLayout">
+	{{> navbar}}
+	{{> modal}}
+
+		{{> yield}}
+		<footer>
+			{{> footer}}
+		</footer>
+
+</template>
